margin change +  blurry transform text fixed

--- a/src/components/sidebar/sidebar.module.css
+++ b/src/components/sidebar/sidebar.module.css
@@ -1,15 +1,20 @@
 .avatar {
     width: 104px;
     height: 104px;
-    margin-top: 16px;
     border: White solid 5px;
     /* Change border to '#2196F3' when real photo added*/
+    margin-top: 24px;
   }
 
   .name {
     text-align: center;
     font-family: "Neutraface Text Bold";
     margin-top: 16px;
+    margin-bottom: 8px;
+  }
+
+  .workAvailability {
+    text-align: center;
     margin-bottom: 16px;
   }
 
@@ -17,11 +22,12 @@
   transform: scale(1.5);
   transition-duration: .3s;
   transition-property: transform;
-  color: #42a5f5;
 }
 
-.footerIcon{
-  color: #2196F3;
+.navItem{
+   /* Avoid blurry text on transform */
+  backface-visibility: hidden;
+  will-change: transform;
 }
 
 .navItem:hover {
